@@ -96,6 +96,7 @@ Broker:
 - Report an error if the config file is set to a directory. Closes #1814.
 - Fix bridges incorrectly setting Wills to manage remote notifications when
   `notifications_local_only` was set true. Closes #1902.
+- Bridges now obey MQTT v5 server-keepalive.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
